@@ -28,6 +28,7 @@ export(all_unique)
 export(as.data.frame)
 export(as_yaml)
 export(cells)
+export(check_part_whole_relation)
 export(check_that)
 export(compare)
 export(confront)
