@@ -1,6 +1,10 @@
 version 0.9.4
 - New functions 'in_linear_sequence' and 'is_linear_sequence' 
   check for gaps/duplicates in numerical or time series.
+- New function in_range checks whether a variable is between (strict)
+  bounds.
+- New function check_part_whole_relation facilitates checking aggregates
+  against details, for data in 'long' format.
 
 
 
